# Drone

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
config/camera/: camera_to_body.yaml  down_camera.yaml
config/pi/: vision-nav.env.example
config/px4/: README.md  holybro_x500v2_pixhawk6c.params
data/replay_cases/: README.md  manifest.example.json  replay_case_manifest.schema.json
data/replay_cases/synthetic_smoke/: manifest.json
desktop-app/: .gitignore  STITCH_IMPORT_README.md  dev.bat  index.html  package-lock.json  package.json  tailwind.config.js
desktop-app/docs/: proxigo-api.md
desktop-app/export-preview/: AGENT_AUTO_DEPLOY.md  CLAUDE_AGENT_CONTEXT.md  README.md  WINDOWS_QUICKSTART.md  deploy-and-run.ps1  seed-demo-state.html  server.mjs  start-powershell.ps1  start-windows.bat
desktop-app/src/: App.tsx  index.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: lib.rs  main.rs
desktop-app/src-tauri/src/commands/: config_cmd.rs  discovery.rs  drone.rs  edge_api.rs  mod.rs  profile.rs  satellite.rs  ssh.rs  telemetry.rs
desktop-app/stitch-export/: STITCH_PASTE_CODEBASE.md  STITCH_PASTE_HANDOFF.md
docker/desktop/: Dockerfile  docker-compose.yml
docker/pi/: Dockerfile  docker-compose.yml
docs/: app-process-map.md  ardupilot-externalnav-adapter.md  autonomy-ground-control-implementation-plan.md  autonomy-ground-control-research.md  camera-calibration.md  desktop-app.md  figma-defense-gcs-ux-direction.md  flight-control-and-compute-boundaries.md  github-push-plan.md  gnss-denied-vision-navigation.md  holybro-x500v2-hardware-data-inputs.md  holybro-x500v2-prop-off-hardware-test.md  localization-output-interfaces.md  operator-handoff.md  project-plan.md  project-summary.md  px4-external-vision-bench.md  raspberry-pi-setup.md  reference-repo-assessment.md  references-and-inspiration.md  ros2-runtime.md  safety-and-control-boundaries.md  setup-runbook.md  simulator-development-stack.md  software-download-checklist.md  ssh-and-transfer.md  stable-project-scaffold.md  stitch-missing-panes-content.md  stitch-uncovered-desktop-features.md  terrain-vision-navigation.md  vision-pipeline.md  vozilla-ui-gap-analysis.md  windows-11-codex-handoff.md
docs/cloud/: README.md  api-contract.md  cloudflare-domain-runbook.md  govcloud-preparation.md  hybrid-to-govcloud-roadmap.md  map-artifact-and-usage-model.md  open-questions.md  provider-cost-and-stack-comparison.md  security-and-compliance-readiness.md  team-implementation-checklist.md
map_bundles/example/: manifest.json
requirements/: pi-host.txt  pi.txt
ros2/: README.md
ros2/drone_vision_nav/: package.xml  setup.cfg  setup.py
ros2/drone_vision_nav/drone_vision_nav/: __init__.py  terrain_nav_live.py  terrain_nav_replay.py
ros2/launch/: terrain_nav_live.launch.py  terrain_nav_replay.launch.py
scripts/dev/: autonomy_goal_status.sh  desktop_docker.ps1  evaluate_px4_sitl_receiver_evidence.sh  evaluate_px4_sitl_session.sh  evaluate_synthetic_replay_cases.sh  export_desktop_ui_preview.sh  handoff_audit.sh  local_preflight.sh  px4_sitl_external_vision_smoke.sh  run_local_autonomy_readiness_audit.sh  run_px4_sitl_external_vision_capture.sh  run_rosbag2_cli_review.sh  setup_px4_sitl_prereqs.sh
scripts/mac/: bootstrap_pi_over_ssh.sh  enable_remote_login.sh  goal_status.sh  install_pi_ssh_key.sh  pi_exec.sh  pi_status.sh  run_pi_first_checks.sh  setup_mac_ssh_and_transfer.sh  setup_pi_ssh_config.sh  sync_from_pi.sh  sync_to_pi.sh  test_pi_ssh.sh  verify_mac_transfer.sh
scripts/pi/: bootstrap_pi5.sh  build_bundle_from_map_source.sh  build_docker.sh  capture_calibration_set.sh  check_ardupilot_params.sh  check_global_shutter_camera.sh  check_gnss_denied_plan.sh  check_mavlink_endpoint.sh  check_micro_xrce_dds_agent.sh  check_px4_params.sh  check_time_sync.sh  collect_pi_info.sh  create_field_collection_plan.sh  create_field_evidence_template.sh  create_support_bundle.sh  diagnose_mission_bundle.sh  enable_ssh_transfer.sh  first_run_checks.sh  install_mission_planner.sh  install_qgroundcontrol.sh  install_vision_nav_service.sh  preflight_field_capture.sh  read_runtime_status.sh  register_field_replay_case.sh  replay_terrain_nav_log.sh  replay_vision_nav_frames.sh  run_autonomy_evidence_workflow.sh  run_autonomy_readiness_audit.sh  run_companion_api.sh  run_docker.sh  run_feature_method_benchmark.sh  run_rosbag_export_validation.sh  run_status_bridge.sh  run_terrain_nav_loop.sh  run_threshold_tuning_report.sh  run_vision_nav_loop.sh  smoke_test_docker.sh  smoke_test_vision.sh  start_companion_api_docker.sh  stop_docker.sh  (+5 more)
src/vision_nav/: __init__.py  ardupilot_params.py  autonomy_evidence_package.py  autonomy_evidence_workflow.py  autonomy_handoff.py  autonomy_readiness.py  barometer.py  bench_readiness.py  benchmark_retrieval.py  build_bundle_from_map_source.py  build_feature_map.py  build_map_bundle.py  build_terrain_bundle.py  bundle.py  bundle_checksums.py  bundle_diagnostics.py  calibrate_camera.py  camera.py  camera_health.py  capture_frame.py  companion_api.py  external_position.py  external_position_health.py  feature_method_benchmark.py  features.py  field_capture_metadata.py  field_capture_metadata_update.py  field_capture_preflight.py  field_collection_plan.py  field_conditions.py  field_evidence_gate.py  field_evidence_template.py  field_log_capture_report.py  field_workflow_selection.py  flight_evidence.py  generate_synthetic_pair.py  georef.py  geospatial_health.py  gnss_denied_plan.py  match_bundle_frame.py  (+33 more)
systemd/user/: drone-vision-nav-api.service  drone-vision-nav-status-bridge.service  drone-vision-nav.service
tests/: run_unit_tests.py  test_barometer.py  test_bundle.py  test_companion_api.py  test_external_position.py  test_external_position_health.py  test_georef.py  test_matching.py  test_mavlink_bridge.py  test_quality.py  test_ros2_bridge.py  test_ros2_launch_profiles.py  test_terrain_navigation.py
transfer/: README.md
(+30 files in other folders)
