[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-vision-nav"
version = "0.1.0"
description = "GNSS-denied vision navigation prototype for Raspberry Pi and PX4."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "rich>=13.0",
]

[project.optional-dependencies]
geo = [
  "geographiclib>=2.0",
  "pyproj>=3.4",
]
mavlink = [
  "pymavlink>=2.4",
]

[project.scripts]
vision-nav-build-map = "vision_nav.build_feature_map:main"
vision-nav-build-bundle = "vision_nav.build_map_bundle:main"
vision-nav-build-bundle-from-map-source = "vision_nav.build_bundle_from_map_source:main"
vision-nav-build-terrain-bundle = "vision_nav.build_terrain_bundle:main"
vision-nav-bench-readiness = "vision_nav.bench_readiness:main"
vision-nav-check-gnss-denied-plan = "vision_nav.gnss_denied_plan:main"
vision-nav-benchmark-feature-methods = "vision_nav.feature_method_benchmark:main"
vision-nav-benchmark-retrieval = "vision_nav.benchmark_retrieval:main"
vision-nav-bundle-checksums = "vision_nav.bundle_checksums:main"
vision-nav-diagnose-bundle-inputs = "vision_nav.bundle_diagnostics:main"
vision-nav-calibrate-camera = "vision_nav.calibrate_camera:main"
vision-nav-camera-health = "vision_nav.camera_health:main"
vision-nav-create-field-evidence-template = "vision_nav.field_evidence_template:main"
vision-nav-create-field-log-capture-report = "vision_nav.field_log_capture_report:main"
vision-nav-preflight-field-capture = "vision_nav.field_capture_preflight:main"
vision-nav-update-field-capture-metadata = "vision_nav.field_capture_metadata_update:main"
vision-nav-map-health = "vision_nav.geospatial_health:main"
vision-nav-match-bundle-frame = "vision_nav.match_bundle_frame:main"
vision-nav-match-frame = "vision_nav.match_frame_to_map:main"
vision-nav-match-terrain-frame = "vision_nav.match_terrain_frame:main"
vision-nav-generate-synthetic-pair = "vision_nav.generate_synthetic_pair:main"
vision-nav-send-mavlink-log = "vision_nav.mavlink_bridge:main"
vision-nav-run-bundle-loop = "vision_nav.run_bundle_match_loop:main"
vision-nav-companion-api = "vision_nav.companion_api:main"
vision-nav-run-status-bridge = "vision_nav.run_status_bridge:main"
vision-nav-run-terrain-loop = "vision_nav.run_terrain_loop:main"
vision-nav-evaluate-replay-gates = "vision_nav.replay_gates:main"
vision-nav-evaluate-replay-manifest = "vision_nav.replay_case_manifest:main"
vision-nav-register-replay-case = "vision_nav.replay_case_registry:main"
vision-nav-audit-replay-coverage = "vision_nav.replay_dataset_audit:main"
vision-nav-field-evidence-gate = "vision_nav.field_evidence_gate:main"
vision-nav-check-px4-params = "vision_nav.px4_params:main"
vision-nav-create-field-collection-plan = "vision_nav.field_collection_plan:main"
vision-nav-replay-bundle-frames = "vision_nav.replay_bundle_frames:main"
vision-nav-replay-terrain-log = "vision_nav.replay_terrain_log:main"
vision-nav-summarize-match-log = "vision_nav.summarize_match_log:main"
vision-nav-support-bundle = "vision_nav.support_bundle:main"
vision-nav-tune-replay-thresholds = "vision_nav.threshold_tuning:main"
vision-nav-validate-bundle = "vision_nav.validate_map_bundle:main"
vision-nav-validate-terrain-bundle = "vision_nav.terrain_bundle:main"
vision-nav-validate-terrain-bundle-report = "vision_nav.terrain_bundle_validation:main"

[tool.setuptools.packages.find]
where = ["src"]
