[package]
name = "drone-vision-nav-desktop"
version = "0.1.0"
description = "Drone GNSS-denied vision navigation desktop app"
authors = ["Drone Vision Nav"]
edition = "2021"

[lib]
name = "drone_vision_nav_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
ssh2 = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff", "bmp", "webp", "gif"] }
tiff = "0.11"
dirs = "5"
base64 = "0.22"
anyhow = "1"
