<?xml version="1.0"?>
<package format="3">
  <name>drone_vision_nav</name>
  <version>0.1.0</version>
  <description>ROS 2 package wrapper for Drone GNSS-denied terrain vision navigation.</description>
  <maintainer email="dev@example.com">Drone Vision Nav</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
